# Product_Pulse_UI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  blocks.json  email.json  nixpacks.toml  pyproject.toml  railway.toml
.github/workflows/: ci.yml  scheduler.yml
config/: mcp-servers.json  products.example.yaml  products.production.example.yaml  products.staging.example.yaml  pulse.yaml
config/dashboard_weeks/: 2026-W21.json  2026-W24.json
docs/: architecture.md  context.md  deploymentplan.md  edge-case.md  implementation-plan.md  production-signoff.template.md  runbook.md  scheduler.md  staging-signoff.template.md  ui.md
mcp-servers/: README.md
scripts/: README.md  fetch_reviews.py  production_checklist.py  render_report.py  run_reasoning.py  scheduled_run.ps1  scheduled_run.sh  seed_dashboard.py  staging_checklist.py  test_doc_append.py  test_email_draft.py  trigger_backfill.py
src/pulse/: __init__.py  cli.py  config.py  orchestrator.py
tests/: conftest.py
tests/fixtures/: doc_section_groww_sample.json  email_groww_sample.json  groww_raw_audit_sample.json  groww_reviews_sample.json  reasoning_reviews_sample.json  report_groww_sample.json  reviews_adversarial.json
tests/integration/: test_groq_summarize.py  test_ingest_live.py  test_staging_e2e.py
tests/unit/: test_analytics.py  test_backfill_api.py  test_cli.py  test_cluster.py  test_config.py  test_email_render.py  test_embed.py  test_filters.py  test_google_mcp_client.py  test_iso_week.py  (+12 more)
ui/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
(+46 files in other folders)
